# ChorusGraph

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-lock.txt
.cursor/rules/: chorusgraph-native.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
.venv-clean-test/: pyvenv.cfg
.venv-clean-test/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
.venv-clean-test2/: pyvenv.cfg
.venv-clean-test2/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
.venv_pkg_test/: pyvenv.cfg
.venv_pkg_test/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
benchmark/: FAIRNESS_H9.md  SCENARIOS.md  __init__.py  analyze.py  analyze_fc2_failures.py  archive_results.py  belief_calibration.py  benchmark_flags.py  cache_control.py  compare_regression.py  compare_scenarios.py  dedupe_jsonl.py  diagnose_container_a.py  distributed_proof.py  dry_run_report.json  finance_multiagent_shared.py  framework_guard.py  generate_results_doc.py  healthcare_workload.py  jsonl_io.py  measure.py  multiagent_measure.py  profiler.py  rebuild_analysis.py  rebuild_comparison_report.py  rubric.py  run.py  run_all_benchmarks.py  run_finance_multiagent.py  run_multiagent.py  run_offline_ab.py  run_profiler.py  run_scenarios.py  run_volume.py  scenarios.py  scenarios_fanout.py  stub_gemini.py  thresholds.py  tiers.py  wiring.py  (+1 more)
benchmark/azure/: Dockerfile  README.md  deploy_and_run.ps1  deploy_from_local.ps1  entrypoint.sh  fetch_results.ps1  run_benchmark.sh  sync_and_test.sh  (+1 more)
chorusgraph/: __init__.py  embedders.py
deploy/: Dockerfile  docker-compose.yml
dist_pkg_test/: chorusgraph-1.0.2-py3-none-any.whl
docs/: ADR-004-native-runtime.md  ADR-005-warm-chunk-vectors.md  ADR-006-l1-single-flight.md  ADR-007-react-repeated-action-default.md  ADR-008-llm-call-interceptors.md  AI_IDE_PROMPTS.md  API_1_0.md  BACKUP_RESTORE.md  BENCHMARK.md  BENCHMARK_RESULTS.md  CACHE_PROFILES.md  COMPOSE.md  DEPLOY.md  DESIGN_v0.2.md  DESIGN_v0.3_PRISM_ENGINE.md  DEVELOPER_GUIDE.md  ENGINE_DESIGN_v0.1.md  ENTERPRISE_READINESS.md  FINANCE_MULTIAGENT_CHORUS.md  FULL_CONVERSATION.md  HANDOFF-LOOP-TOKEN-BURN-PAIN-2026-07-17.md  INSTALL.md  LOAD_TESTING.md  LOOP-TOKEN-BURN-FINDINGS.md  NOTEBOOKLM_STORY.md  PII_RETENTION.md  PLUGINS.md  PROCESS.md  PRODUCT_HUNT_DEMO.md  PRODUCT_QA_BENCHMARK.md  PROJECT_JOURNAL.md  RELEASE.md  STABILITY.md  TERMINOLOGY.md  THREAT_MODEL.md  WHITEPAPER.md  WORKFLOW.md  ai-overview.md  architecture.md  llm-context.md
handoffs/: handoff1.md  handoff2.md  handoff3.md  handoff4.md  handoff5.md  handoff6.md  handoff7.md  handoff8.md  handoff9.md  handoffBug1.md  handoffBug2_dict_node_adapter.md  handoffCORE_MVP.md  handoffE1.md  handoffE2.md  handoffE3.md  handoffE4.md  handoffE5.md  handoffE6.md  handoffE7.md  handoffE8.md  handoffE9.md  handoffEF_finance_multiagent.md  handoffEback.md  handoffEnterprisePersistence.md  handoffH10.md  handoffH11.md  handoffH12.md  handoffH13.md  handoffH20.md  handoffH21.md  handoffImprove1.md  handoffImprove2.md  handoffPrismRagAddition.md  handoffPrismRagPlugin.md  handoffProductLanding.md  handoffback1.md  handoffback2.md  handoffback3.md  handoffback4.md  handoffback5.md  (+23 more)
scripts/: _probe_loop_token_burn.py  audit_gemini_keys.py  debug_chunk.py  download_turns_chunked.py  download_turns_from_vm.py  export_from_keyvault.py  export_website_chat_turns.py  inspect_ai_chat_tables.py  list_chat_tables.py  probe_azure_db.py  probe_hub_db.py  probe_remote_db.py  secure_github_repos.py  smoke_warm_chunk_vectors.py  swap_gemini_key.py  verify_gemini_keys.py  vm_count_turns.sh  vm_export_chunk.sh  vm_export_turns_b64.sh  vm_probe_postgres.sh  vm_sample_turns.sh
tests/: conftest.py  test_adapter.py  test_agent.py  test_agents.py  test_audit.py  test_benchmark.py  test_benchmark_cache_flags.py  test_benchmark_fanout.py  test_benchmark_wiring.py  test_bus_redis.py  test_cache_gate.py  test_cache_gate_profile.py  test_cache_profiles.py  test_checkpoint.py  test_chorus_batch.py  test_chroma_local_rag_example.py  test_clinical_fingerprint.py  test_command_interrupt.py  test_compare_scenarios.py  test_compose_stack.py  test_compound_rubric.py  test_container_a_graph.py  test_container_d_artifacts.py  test_core_dependencies.py  test_core_engine.py  test_corpus_seed.py  test_cortex_compat.py  test_cortex_projector.py  test_deterministic_tier.py  test_dict_node_adapter.py  test_embed_equivalence.py  test_embed_once.py  test_engine_phases.py  test_fc_hc_no_langgraph.py  test_federation.py  test_finance_agent.py  test_finance_multiagent.py  test_func_api.py  test_hc1_cache_scope.py  test_hc2_cache_payload.py  (+43 more)
website/: README.md  benchmarks.html  demo.html  index.html  pricing.html
(+552 files in other folders)
