[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chorusgraph"
version = "1.0.0"
description = "Native agent graph runtime with Prism cache, memory, swappable PrismRAG retrieval, and Route Ledger"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Insight IT Solutions" }]
keywords = ["agents", "llm", "semantic-cache", "rag", "prismrag", "graph-runtime", "orchestration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "numpy>=1.24",
    "pydantic>=2.0",
    "prismlang>=0.1.1",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0",
]
benchmark = [
    "chromadb>=0.4",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0",
]
postgres = ["psycopg[binary]>=3.1"]
postgres-checkpoint = [
    "langgraph-checkpoint-postgres>=2.0",
    "langgraph>=0.2.0",
]
cortex = ["prismcortex[prism,gemini]>=0.1"]
gemini = ["google-genai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-requests>=2.32",
    "cyclonedx-bom>=4.0",
    "pip-tools>=7.4",
    "google-genai>=1.0",
]
enterprise-ci = [
    "chorusgraph[dev,gemini,benchmark-healthcare,benchmark]",
]
benchmark-healthcare = [
    "chromadb>=0.4",
]
retrieval = [
    "chromadb>=0.4",
]

[project.scripts]
chorusgraph-demo = "chorusgraph.examples.demo_graph:main"
chorusgraph-finance = "chorusgraph.examples.finance_agent.run:main"
chorusgraph-finance-memory = "chorusgraph.examples.finance_agent.run_memory_demo:main"
chorusgraph-finance-patterns = "chorusgraph.examples.finance_agent.run_patterns_demo:main"
chorusgraph-shadow = "chorusgraph.shadow.harness:main"
chorusgraph-replay = "chorusgraph.shadow.replay.cli:main"
chorusgraph-benchmark = "benchmark.run:main"
chorusgraph-benchmark-volume = "benchmark.run_volume:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chorusgraph*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "."]
addopts = "-m 'not live'"
markers = [
    "live: live Gemini/API integration (requires keys + network)",
    "network: tests that require outbound network",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["benchmark/results", "handoffs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "E402", "B007", "F841"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
exclude = ["benchmark/results/", "tests/fixtures/"]

[tool.coverage.run]
source = ["chorusgraph", "benchmark"]
omit = ["tests/*", "benchmark/results/*"]

[tool.coverage.report]
fail_under = 71
show_missing = true
skip_covered = true
